Comenzado componente de Macros

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -4,6 +4,10 @@
   font-family: 'Roboto';
 }
 
+html {
+  background-color: #eeeeee;
+}
+
 .background {
   -webkit-background-size: cover;
   -moz-background-size: cover;
