Modificada fuente a Nunito. Arregladas Measures

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,12 +1,4 @@
-* {
-  margin: 0;
-  padding: 0;
-  font-family: 'Roboto';
-}
-
-html {
-  background-color: #eeeeee;
-}
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap');
 
 .background {
   -webkit-background-size: cover;
