--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,4 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;500;700&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+}
 
 .background {
   -webkit-background-size: cover;
