--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,6 +5,16 @@
   padding: 0;
 }
 
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: textfield;
+  margin: 0; 
+}
+
 .background {
   -webkit-background-size: cover;
   -moz-background-size: cover;
