--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap');
 
 * {
   margin: 0;
@@ -34,4 +36,8 @@ input[type=number]::-webkit-outer-spin-button {
   to {
     transform: rotate(359deg);
   }
+}
+
+.canvasjs-chart-credit {
+  display: none;
 }
