--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;500;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap');
 
 * {
@@ -9,6 +9,7 @@
 
 input[type=number] {
   -moz-appearance: textfield;
+  appearance: textfield;
 }
 
 input[type=number]::-webkit-inner-spin-button, 
@@ -22,6 +23,7 @@ input[type=number]::-webkit-outer-spin-button {
   -moz-background-size: cover;
   -o-background-size: cover;
   -webkit-filter: brightness(40%);
+  filter: brightness(40%);
   background-size: cover;
   width: 100%;
   height: 100vh;
